// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createJobOffer > should create a job offer with the minimal data 1`] = `
{
  "_id": Any<ObjectId>,
  "apply_email": null,
  "apply_phone": null,
  "apply_url": null,
  "contract_duration": null,
  "contract_remote": null,
  "contract_start": 2024-09-01T00:00:00.000Z,
  "contract_type": null,
  "created_at": 2024-06-18T00:00:00.000Z,
  "offer_access_conditions": [],
  "offer_creation": 2024-06-18T00:00:00.000Z,
  "offer_description": "Envie de devenir développeur web ? Rejoignez-nous !",
  "offer_desired_skills": [],
  "offer_diploma_level": null,
  "offer_expiration": 2024-08-17T22:00:00.000Z,
  "offer_multicast": true,
  "offer_opening_count": 1,
  "offer_origin": null,
  "offer_rome_code": [
    "M1602",
  ],
  "offer_status": "Active",
  "offer_title": "Apprentis en développement web",
  "offer_to_be_acquired_skills": [],
  "partner": "Some organisation",
  "partner_job_id": null,
  "workplace_address": {
    "label": "20 AVENUE DE SEGUR 75007 PARIS",
  },
  "workplace_brand": null,
  "workplace_description": null,
  "workplace_geopoint": {
    "coordinates": [
      2.347,
      48.8589,
    ],
    "type": "Point",
  },
  "workplace_idcc": 1459,
  "workplace_legal_name": "DIRECTION INTERMINISTERIELLE DU NUMERIQUE",
  "workplace_naf_code": "84.11Z",
  "workplace_naf_label": "Administration publique générale",
  "workplace_name": "DIRECTION INTERMINISTERIELLE DU NUMERIQUE",
  "workplace_opco": "AKTO / Opco entreprises et salariés des services à forte intensité de main d'oeuvre",
  "workplace_siret": "13002526500013",
  "workplace_size": "100 à 199 salariés",
  "workplace_website": null,
}
`;

exports[`findJobsOpportunities > should execute query 1`] = `
[
  {
    "apply_phone": "0300000000",
    "contract_duration": null,
    "contract_remote": null,
    "contract_start": 2021-01-28T15:00:00.000Z,
    "contract_type": [
      "Apprentissage",
    ],
    "offer_access_conditions": [
      "Ce métier est accessible avec un diplôme de fin d'études secondaires",
    ],
    "offer_creation": 2021-01-01T00:00:00.000Z,
    "offer_description": "Exécute des travaux administratifs courants",
    "offer_desired_skills": [
      "Faire preuve de rigueur et de précision",
    ],
    "offer_diploma_level": null,
    "offer_expiration": null,
    "offer_opening_count": 1,
    "offer_rome_code": [
      "M1602",
    ],
    "offer_status": "Active",
    "offer_title": undefined,
    "offer_to_be_acquired_skills": [
      "Production, Fabrication: Procéder à l'enregistrement, au tri, à l'affranchissement du courrier",
      "Production, Fabrication: Réaliser des travaux de reprographie",
      "Organisation: Contrôler la conformité des données ou des documents",
    ],
    "partner": "La bonne alternance",
    "partner_job_id": null,
    "workplace_address": {
      "label": undefined,
    },
    "workplace_brand": null,
    "workplace_description": null,
    "workplace_geopoint": {
      "coordinates": [
        2.347,
        48.8589,
      ],
      "type": "Point",
    },
    "workplace_idcc": null,
    "workplace_legal_name": "ASSEMBLEE NATIONALE",
    "workplace_naf_code": null,
    "workplace_naf_label": null,
    "workplace_name": "ASSEMBLEE NATIONALE",
    "workplace_opco": null,
    "workplace_siret": "11000001500013",
    "workplace_size": null,
    "workplace_website": null,
  },
  {
    "apply_phone": null,
    "contract_duration": null,
    "contract_remote": null,
    "contract_start": null,
    "contract_type": [],
    "offer_access_conditions": [],
    "offer_creation": 2024-01-01T00:00:00.000Z,
    "offer_description": "Attention il te faut une super motivation pour ce job",
    "offer_desired_skills": [],
    "offer_diploma_level": null,
    "offer_expiration": null,
    "offer_opening_count": 1,
    "offer_rome_code": [
      "M1602",
    ],
    "offer_status": "Active",
    "offer_title": "Super offre d'apprentissage",
    "offer_to_be_acquired_skills": [],
    "partner": "France Travail",
    "partner_job_id": "1",
    "workplace_address": {
      "label": "",
    },
    "workplace_brand": null,
    "workplace_description": "",
    "workplace_geopoint": {
      "coordinates": [
        NaN,
        NaN,
      ],
      "type": "Point",
    },
    "workplace_idcc": null,
    "workplace_legal_name": null,
    "workplace_naf_code": null,
    "workplace_naf_label": null,
    "workplace_name": "",
    "workplace_opco": null,
    "workplace_siret": null,
    "workplace_size": null,
    "workplace_website": null,
  },
  {
    "apply_email": null,
    "apply_phone": null,
    "contract_duration": null,
    "contract_remote": null,
    "contract_start": null,
    "contract_type": null,
    "created_at": 2021-01-28T15:00:00.000Z,
    "distance": 0,
    "offer_access_conditions": [],
    "offer_creation": 2021-01-01T00:00:00.000Z,
    "offer_description": "Attention il te faut une super motivation pour ce job",
    "offer_desired_skills": [],
    "offer_diploma_level": null,
    "offer_expiration": null,
    "offer_multicast": true,
    "offer_opening_count": 1,
    "offer_origin": null,
    "offer_rome_code": [
      "M1602",
    ],
    "offer_status": "Active",
    "offer_title": "Une super offre d'alternance",
    "offer_to_be_acquired_skills": [],
    "partner": "Hellowork",
    "partner_job_id": null,
    "workplace_address": {
      "label": "126 RUE DE L'UNIVERSITE 75007 PARIS",
    },
    "workplace_brand": null,
    "workplace_description": null,
    "workplace_geopoint": {
      "coordinates": [
        2.347,
        48.8589,
      ],
      "type": "Point",
    },
    "workplace_idcc": null,
    "workplace_legal_name": null,
    "workplace_naf_code": null,
    "workplace_naf_label": null,
    "workplace_name": null,
    "workplace_opco": null,
    "workplace_siret": null,
    "workplace_size": null,
    "workplace_website": null,
  },
]
`;

exports[`findJobsOpportunities > should execute query 2`] = `
[
  {
    "apply_phone": "0100000000",
    "apply_url": "http://localhost:3000/recherche-apprentissage?type=lba&itemId=11000001500013",
    "workplace_address": {
      "label": "null null null null",
    },
    "workplace_brand": "ASSEMBLEE NATIONALE - La vraie",
    "workplace_description": null,
    "workplace_geopoint": {
      "coordinates": [
        2.347,
        48.8589,
      ],
      "type": "Point",
    },
    "workplace_idcc": null,
    "workplace_legal_name": "ASSEMBLEE NATIONALE",
    "workplace_naf_code": "8411Z",
    "workplace_naf_label": "Administration publique générale",
    "workplace_name": "ASSEMBLEE NATIONALE - La vraie",
    "workplace_opco": null,
    "workplace_siret": "11000001500013",
    "workplace_size": null,
    "workplace_website": null,
  },
]
`;

exports[`updateJobOffer > should update a job offer with the minimal data 1`] = `
{
  "_id": Any<ObjectId>,
  "apply_email": null,
  "apply_phone": null,
  "apply_url": null,
  "contract_duration": null,
  "contract_remote": null,
  "contract_start": 2024-09-01T00:00:00.000Z,
  "contract_type": null,
  "created_at": 2023-09-05T22:00:00.000Z,
  "offer_access_conditions": [],
  "offer_creation": 2023-09-05T22:00:00.000Z,
  "offer_description": "Envie de devenir développeur web ? Rejoignez-nous !",
  "offer_desired_skills": [],
  "offer_diploma_level": null,
  "offer_expiration": 2023-11-05T23:00:00.000Z,
  "offer_multicast": true,
  "offer_opening_count": 1,
  "offer_origin": null,
  "offer_rome_code": [
    "M1602",
  ],
  "offer_status": "Active",
  "offer_title": "Apprentis en développement web",
  "offer_to_be_acquired_skills": [],
  "partner": "Some organisation",
  "partner_job_id": null,
  "workplace_address": {
    "label": "20 AVENUE DE SEGUR 75007 PARIS",
  },
  "workplace_brand": null,
  "workplace_description": null,
  "workplace_geopoint": {
    "coordinates": [
      2.347,
      48.8589,
    ],
    "type": "Point",
  },
  "workplace_idcc": 1459,
  "workplace_legal_name": "DIRECTION INTERMINISTERIELLE DU NUMERIQUE",
  "workplace_naf_code": "84.11Z",
  "workplace_naf_label": "Administration publique générale",
  "workplace_name": "DIRECTION INTERMINISTERIELLE DU NUMERIQUE",
  "workplace_opco": "AKTO / Opco entreprises et salariés des services à forte intensité de main d'oeuvre",
  "workplace_siret": "13002526500013",
  "workplace_size": "100 à 199 salariés",
  "workplace_website": null,
}
`;
